# byte

./: .all-contributorsrc  .biomeignore  .coveragerc  .editorconfig  .env.docker.example  .env.example  .env.test  .gitignore  .pdm-python  .pre-commit-config.yaml  .prek-config.yaml  .prekignore  .prettierignore  .sourcery.yaml  .tool-versions  AGENT5_REPORT.md  AGENT6_FINAL_REPORT.md  CLAUDE.md  CNAME  CONTRIBUTING.rst  FUNDING.yml  INTEGRATION_TEST_INVESTIGATION_PROMPT.md  Makefile  README.md  SECURITY.md  TEST_INFRASTRUCTURE_REPORT.md  biome.json  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  sonar-project.properties  tailwind.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.yaml  config.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml  deploy-bot.yml  docs-preview.yml  docs.yml
byte_bot/: __init__.py  __main__.py  __metadata__.py  app.py  cli.py  utils.py
byte_bot/byte/: __init__.py  bot.py
byte_bot/byte/lib/: __init__.py  checks.py  log.py  settings.py  utils.py
byte_bot/byte/plugins/: __init__.py  admin.py  astral.py  config.py  events.py  forums.py  general.py  github.py  python.py
byte_bot/byte/views/: __init__.py  abstract_views.py  astral.py  config.py  embed.py  forums.py  python.py
byte_bot/server/: __init__.py
byte_bot/server/domain/: __init__.py  urls.py
byte_bot/server/lib/: __init__.py  constants.py  cors.py  dependencies.py  dto.py  openapi.py  schema.py  serialization.py  settings.py  static_files.py  template.py  types.py
docs/: changelog.rst  conf.py  database-migrations.md  database-migrations.rst  docker-compose.rst  docker-setup.md  index.rst  observability.rst
docs/byte/: index.rst
docs/byte/api/: bot.rst  index.rst
docs/byte/usage/: byte.rst  index.rst  starting.rst
docs/web/api/: app.rst  cli.rst  index.rst  metadata.rst  utils.rst
docs/web/usage/: index.rst  starting.rst
latest/: .buildinfo  changelog.html  contribution-guide.html  database-migrations.html  docker-compose.html  genindex.html  index.html  objects.inv  observability.html  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html  types.html  typing.html
latest/_modules/advanced_alchemy/: base.html  filters.html
latest/_modules/byte_api/: app.html
latest/_modules/byte_bot/: app.html  bot.html  utils.html
latest/_modules/src/: app.html  utils.html
latest/_sources/: changelog.rst.txt  database-migrations.rst.txt  index.rst.txt
latest/_static/: custom.css
latest/byte/api/: bot.html  index.html
latest/byte/usage/: byte.html  index.html  starting.html
latest/web/api/: app.html  cli.html  index.html  metadata.html  utils.html
latest/web/usage/: index.html  server.html  starting.html
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/byte_api/: __init__.py  app.py
services/api/src/byte_api/domain/: __init__.py  urls.py
services/api/src/byte_api/domain/db/: __init__.py  models.py
services/api/src/byte_api/domain/github/: __init__.py  helpers.py
services/api/src/byte_api/domain/guilds/: __init__.py  controllers.py  dependencies.py  helpers.py  schemas.py  services.py  urls.py
services/api/src/byte_api/domain/system/: __init__.py  dtos.py  helpers.py
services/api/src/byte_api/domain/system/controllers/: __init__.py  health.py  metrics.py  system.py
services/api/src/byte_api/domain/web/: __init__.py
services/api/src/byte_api/domain/web/controllers/: __init__.py  web.py  websocket.py
services/api/src/byte_api/domain/web/resources/: input.css  style.css
services/api/src/byte_api/domain/web/resources/css/: scalar-theme.css
services/api/src/byte_api/domain/web/templates/: about.html  contact.html  dashboard.html  index.html
services/api/src/byte_api/domain/web/templates/base/: base.html  nav.html
services/api/src/byte_api/lib/: __init__.py  constants.py  cors.py  dependencies.py  exceptions.py  openapi.py  rate_limit.py  scalar_theme.py  schema.py  settings.py  static_files.py  template.py  types.py
services/api/src/byte_api/lib/db/: __init__.py  alembic.ini  base.py  orm.py
services/api/src/byte_api/lib/db/migrations/versions/: 002_simplify_models.py  003_forum_models.py  004_snowflake_fixes.py  005_fix_forum_config_array_type.py  __init__.py
services/api/src/byte_api/lib/log/: __init__.py  controller.py  utils.py
services/api/src/byte_api/lib/middleware/: __init__.py  correlation.py  metrics.py
services/api/src/byte_api/scripts/: __init__.py  migrate.py
services/bot/: Dockerfile  README.md  pyproject.toml  railway.json
services/bot/src/byte_bot/: __init__.py  __main__.py  __metadata__.py  api_client.py  bot.py  config.py
services/bot/src/byte_bot/lib/: __init__.py  checks.py  log.py  settings.py  utils.py
services/bot/src/byte_bot/lib/common/: __init__.py  assets.py
services/bot/src/byte_bot/lib/types/: __init__.py
services/bot/src/byte_bot/plugins/: admin.py  astral.py  config.py  events.py  forums.py  general.py  github.py  python.py  testing.py
services/bot/src/byte_bot/plugins/custom/: __init__.py  litestar.py
services/bot/src/byte_bot/views/: __init__.py  abstract_views.py  astral.py  config.py  forums.py  python.py
services/worker/: README.md
src/: __init__.py  __main__.py  __metadata__.py  app.py  cli.py  utils.py
src/byte/: __init__.py  bot.py  checks.py
src/byte/commands/: __init__.py  admin.py  github.py  guild.py  (+1 more)
src/database/: __init__.py  models.py
src/server/: __init__.py
tests/: README.md  conftest.py  test_pass.py
tests/bot/: __init__.py  test_bot_core.py  test_plugins.py  test_views.py
tests/fixtures/: __init__.py  api_fixtures.py  bot_fixtures.py  db_fixtures.py
tests/integration/: __init__.py  test_api_endpoints.py  test_bot_web_integration.py  test_database.py  test_database_transactions.py
tests/server/: __init__.py  test_database.py  test_guilds.py  test_system.py
tests/unit/: __init__.py  test_models.py  test_schemas.py  test_utils.py
tools/: build_docs.py
(+458 files in other folders)
