[project]
name = "byte-bot"
dynamic = ['version']
description = "Byte is a bot destined to serve in developer-oriented servers."
authors = [
    { name = "Jacob Coffee", email = "jacob@z7x.org" },
]
dependencies = [
    "python-dotenv>=1.0.0",
    "discord-py>=2.3.1",
    "pydantic>=2.5.0",
    "litestar[jwt,opentelemetry,prometheus,standard,structlog]>=2.0.0b4",
    "pydantic-settings>=2.1.0",
    "anyio>=3.7.1",
    "advanced-alchemy>=0.5.4",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]

[project.urls]
Homepage = 'https://docs.byte-bot.app/'
Source = 'https://github.com/JacobCoffee/bytebot'
Documentation = 'https://docs.byte-bot.app'
Changelog = 'https://docs.byte-bot.app/latest/changelog/'
Funding = 'https://github.com/sponsors/JacobCoffee'
Issue = 'https://github.com/JacobCoffee/bytebot/issues/'
Discord = 'https://discord.gg/ZVG8hN6RrJ'
Twitter = 'https://twitter.com/_scriptr'
Reddit = 'https://reddit.com/monorepo'
Youtube = 'https://www.youtube.com/@monorepo'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = 'src/__metadata__.py'

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"
docs-serve = "sphinx-autobuild docs docs/_build/ -j auto --watch app --watch docs --watch tests --watch CONTRIBUTING.rst --port 8002"
changelog = "git cliff -c pyproject.toml -o docs/changelog.rst"
# TODO: Move more from makefile here
ci = { composite = ["lint", "test"] }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "coverage>=7.2.7",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.11.1",
    "hypothesis>=6.82.0",
    "pytest-asyncio>=0.21.1",
]
docs = [
    "sphinx>=7.0.1",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.13.3",
    "sphinx-click>=4.4.0",
    "sphinx-toolbox>=3.4.0",
    "autodoc-pydantic>=1.9.0",
    "shibuya>=2023.7.16",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-design>=0.5.0",
]
lint = [
    "ruff>=0.0.280",
    "codespell>=2.2.5",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "pytailwindcss>=0.2.0",
    "sourcery>=1.6.0",
    "pre-commit>=3.3.3",
    "pyright>=1.1.334",
]

[project.scripts]
app = "litestar.__main__:run_cli"

[project.entry-points."litestar.commands"]
run-bot = "src.cli:run_bot"
run-web = "src.cli:run_web"
run-all = "src.cli:run_all"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.codespell]
quiet-level = 3
ignore-words-list = "selectin, alog"
skip = "pdm.lock, package-lock.json, *.svg"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'except ImportError as e:',
    'except ImportError:',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:sphinxcontrib",
]

[tool.pyright]
include = ["src/", "tests"]
disableBytesTypePromotions = true
exclude = [
  "tools",
  "docs",
]
pythonVersion = "3.11"
reportOptionalMemberAccess = false
reportUnknownMemberType = false
reportGeneralTypeIssues = false

[tool.mypy]
namespace_packages = true # discord.py
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
disallow_subclassing_any = false
exclude = '''(?x)(
^build/
|^dist/
|^.venv/
|^node_modules/
|^migrations/
)
'''
implicit_reexport = false
plugins = ['pydantic.mypy']
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["sqlalchemy.*", "saq.*", "uvicorn.*", "aiohttp.*", "jsbeautifier", "jsbeautifier.*", "re2.*", "uvloop", "uvloop.*"]

[[tool.mypy.overrides]]
module = ["app.lib.db.migrations.*"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.slotscheck]
strict-imports = false

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "ANN102", "ANN401", "PLR0913", "RUF012", "COM812", "ISC001", "ERA001", "TD", "FIX002"]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
    "pydantic.root_validator",
    "pydantic.field_validator",
    "sqlalchemy.ext.declarative.declared_attr",
    "sqlalchemy.orm.declared_attr.directive",
    "sqlalchemy.orm.declared_attr",
]

[tool.ruff.isort]
known-first-party = ["src", "tests"]

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"**/*.*" = [
    "ANN101",
    "ANN401",
    "ANN102",
    "TD",
    "FIX002",
    "RUF012",  # ClassVar Annotations - # TODO: Investigate/Fix
    "FBT001", # Boolean typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "FBT003", # Boolean Boolean default positional argument in function definition
    "B008", # Do not perform function calls in argument defaults
]
"src/**/*.*" = ["PLR0913", "SLF001"]
"src/database/base.py" = ["E501"]
"src/database/migrations/versions/*.*" = ["D", "INP", "PGH"]
"tests/**/*.*" = [
    "S101",
    "D",
    "ARG",
    "PGH",
    "B",
    "FBT",
    "PTH",
    "A",
    "TCH",
    "DTZ",
    "TRY",
    "EM",
    "S",
    "N",
    "SIM",
    "PLR",
    "BLE",
    "RSE",
    "C901",
    "PLW",
    "G",
    "PIE",
    "RUF012",
    "FA",
    "ANN",
    "SLF",
    "PT",
    "INP",
    "TD",
    "FIX",
    "FBT",
    "PLR0913", # too many arguments
    "PT",
    "PLR2004",
    "TID252",
    "T",
]
"docs/**/*.*" = [
    "S",
    "B",
    "DTZ",
    "A",
    "TCH",
    "ERA",
    "D",
    "RET",
    "E731",
    "RUF012",
    "FA100",
    "ARG001",
]
"docs/conf.py" = ["FIX002", "ARG001", "INP001"]
"tools/**/*.*" = ["D", "ARG", "EM", "TRY", "G", "FBT", "INP"]

[tool.git-cliff.changelog]
header = """
=========
Changelog
=========\n
All commits to this project will be documented in this file.\n
"""
body = """
{% if version %}\
    `Release [v{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }} <https://github.com//releases/tag/v{{ version | trim_start_matches(pat="v") }}>`_
    ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
    * `See All commits in v{{ version | trim_start_matches(pat="v") }} <https://github.com//commits/v{{ version | trim_start_matches(pat="v") }}>`_
{% else %}\
    [unreleased]
    ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
{% endif %}\
{% if previous %}\
    {% if previous.commit_id %}
        `{{ previous.commit_id | truncate(length=7, end="") }} <https://github.com//commit/{{ previous.commit_id }}>`_ ... \
            `{{ commit_id | truncate(length=7, end="") }} <https://github.com//commit/{{ commit_id }}>`_ \
            | `See diff for {{ version | trim_start_matches(pat="v") }} <https://github.com//compare/{{ previous.commit_id }}...{{ commit_id }}>`_
    {% endif %}\
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    {{ group | upper_first }}
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    {% for commit in commits %}
        * (`{{ commit.id | truncate(length=7, end="") }} <https://github.com//commit/{{ commit.id }}>`_) {% if commit.breaking %}[**breaking**] {% endif %} - {{ commit.message | upper_first }} ({{ commit.author.name }})\
          {% for footer in commit.footers -%}
            , {{ footer.token }}{{ footer.separator }}{{ footer.value }}\
          {% endfor %}\
    {% endfor %}c
{% endfor %}\n
"""
trim = true
footer = """
Byte Bot Changelog
"""

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactor" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^chore", group = "Miscellaneous Tasks" },
    { body = ".*security", group = "Security" },
]
protect_breaking_commits = false
filter_commits = false
tag_pattern = "v[0-9]*"
skip_tags = "v0.1.0-beta.1"
ignore_tags = ""
topo_order = false
sort_commits = "oldest"
